--- a/Challenger/StoryBoards/Calendar.storyboard
+++ b/Challenger/StoryBoards/Calendar.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -103,7 +104,7 @@
                                     </stackView>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cyG-yJ-VUf" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
                                         <rect key="frame" x="0.0" y="20.5" width="375" height="275"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0HJ-LK-gqR">
                                             <size key="itemSize" width="110" height="91"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -120,7 +121,7 @@
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U9K-Yc-IS4">
                                                             <rect key="frame" x="40" y="30.5" width="30" height="30"/>
-                                                            <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.76078431369999999" green="0.2470588235" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="9Fe-Ve-gTy"/>
                                                                 <constraint firstAttribute="width" constant="30" id="QCb-0r-c5V"/>
@@ -159,7 +160,7 @@
                                     <constraint firstAttribute="height" constant="295" id="qEL-F2-jAH"/>
                                 </constraints>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WSV-Yk-tfF">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WSV-Yk-tfF">
                                 <rect key="frame" x="0.0" y="394" width="375" height="185"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -197,25 +198,52 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="114.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sSn-aI-Rg4">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sSn-aI-Rg4">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="115"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6K-QQ-KJF">
-                                                            <rect key="frame" x="8" y="8" width="274" height="21"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6K-QQ-KJF">
+                                                            <rect key="frame" x="8" y="8" width="50" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZdD-xS-YdH">
-                                                            <rect key="frame" x="8" y="28" width="117" height="85"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZdD-xS-YdH">
+                                                            <rect key="frame" x="21" y="29" width="109" height="78"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="109" id="CBD-gY-oPV"/>
+                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="78" id="gKc-Gg-2O6"/>
+                                                            </constraints>
                                                         </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLD-49-cHW">
+                                                            <rect key="frame" x="333" y="46" width="30" height="23"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="30" id="ApU-xJ-8XM"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                                            <color key="textColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="highlightedColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </label>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="sLD-49-cHW" firstAttribute="top" secondItem="sSn-aI-Rg4" secondAttribute="top" constant="46" id="4Je-dM-wPC"/>
+                                                        <constraint firstItem="x6K-QQ-KJF" firstAttribute="leading" secondItem="sSn-aI-Rg4" secondAttribute="leading" constant="8" id="HK9-YN-oII"/>
+                                                        <constraint firstItem="x6K-QQ-KJF" firstAttribute="top" secondItem="sSn-aI-Rg4" secondAttribute="topMargin" id="TRO-Hu-Zt5"/>
+                                                        <constraint firstItem="ZdD-xS-YdH" firstAttribute="top" secondItem="x6K-QQ-KJF" secondAttribute="bottom" id="ah9-PK-qRl"/>
+                                                        <constraint firstAttribute="bottom" secondItem="ZdD-xS-YdH" secondAttribute="bottom" constant="8" id="eEB-BS-anf"/>
+                                                        <constraint firstItem="sLD-49-cHW" firstAttribute="centerY" secondItem="sSn-aI-Rg4" secondAttribute="centerY" id="fBk-Vz-vSY"/>
+                                                        <constraint firstItem="ZdD-xS-YdH" firstAttribute="leading" secondItem="sSn-aI-Rg4" secondAttribute="leading" constant="21" id="qlC-sA-0gm"/>
+                                                        <constraint firstAttribute="trailing" secondItem="sLD-49-cHW" secondAttribute="trailing" constant="12" id="roq-AI-qSR"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="sSn-aI-Rg4" secondAttribute="trailing" id="8xv-jU-5Yz"/>
+                                                <constraint firstItem="sSn-aI-Rg4" firstAttribute="centerY" secondItem="r8j-dZ-JDw" secondAttribute="centerY" id="NRT-E7-a3F"/>
+                                                <constraint firstItem="sSn-aI-Rg4" firstAttribute="top" secondItem="r8j-dZ-JDw" secondAttribute="top" id="SSo-eD-Gro"/>
+                                                <constraint firstItem="sSn-aI-Rg4" firstAttribute="leading" secondItem="r8j-dZ-JDw" secondAttribute="leading" id="dvn-ty-qO6"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="imageOutlet" destination="ZdD-xS-YdH" id="zzd-Ib-Inq"/>
@@ -289,7 +317,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="tuZ-WY-9Gc" firstAttribute="leading" secondItem="wLo-jL-c6w" secondAttribute="leading" id="5u7-kd-hBq"/>
                             <constraint firstItem="JMh-FM-ntd" firstAttribute="trailing" secondItem="wLo-jL-c6w" secondAttribute="trailing" constant="-5" id="8Xh-jV-9co"/>
@@ -321,7 +349,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="archiveButtonOutlet" destination="ko5-Tn-4Yv" id="mId-Sv-AeJ"/>
+                        <outlet property="archiveButtonOutlet" destination="ko5-Tn-4Yv" id="WBP-Zj-9od"/>
                         <outlet property="calendarView" destination="cyG-yJ-VUf" id="75Q-rY-EUb"/>
                         <outlet property="expandButtonOutlet" destination="JMh-FM-ntd" id="pdi-95-MHk"/>
                         <outlet property="heightCalendarConst" destination="qEL-F2-jAH" id="dZk-o5-Nvq"/>
